timileyin Update index.html

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <h2>Ramdom User Data</h2>
     <div class="info">
-        <h3>Created By Daud Abdul-Gafar Olamilekan </h3>
+        <h3>Created Lawal Timileyin </h3>
     </div>
-    <marquee behavior="" direction=""><h3 class="matric">Matric No: HND/240419</h3></marquee>
+    <marquee behavior="" direction=""><h3 class="matric">Matric No: HND/230780</h3></marquee>
     <div class="btndiv"><button onclick="myfetch()">fetch data</button></div>
     <table id="userTable">
         <thead>
