--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </div>
     <marquee behavior="" direction=""><h3 class="matric">Matric No: HND/230780</h3></marquee>
     <div class="btndiv"><button onclick="myfetch()">fetch data</button></div>
+    <div class="thetab">
     <table id="userTable">
         <thead>
             <tr>
@@ -29,7 +30,7 @@
             <!-- Data will be inserted here -->
         </tbody>
     </table>
-
+    </div>
     <script src="script.js">
        
     </script>
